force-app/main/default/objects/MessagingSession/fields/AuthSessionId__c.field-meta.xml
<CustomField>
    <fullName>AuthSessionId__c</fullName>
    <description>Identifies if there’s an AuthSession currently linked to this MessagingSession. This indicates whether the messaging session is authenticated.</description>
    <label>AuthSessionId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>