force-app/main/default/objects/MessagingSession/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Messaging Sessions</relationshipLabel>
    <relationshipName>Messaging_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>