force-app/main/default/objects/MessagingSession/fields/cookieId__c.field-meta.xml
<CustomField>
    <fullName>cookieId__c</fullName>
    <label>cookieId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>