force-app/main/default/objects/MessagingSession/fields/SDO_LiveMessaging_Subject__c.field-meta.xml
<CustomField>
    <fullName>SDO_LiveMessaging_Subject__c</fullName>
    <description>JD - 10/4/22 - Subject connects to Case to bring in related Case information to quickly enhance and support reports</description>
    <formula>IF(ISPICKVAL( SDO_MessagingSession_BotName__c, &quot;Buyer Assistant&quot;),
 MessagingEndUser.Name &amp; &quot; | Buyer Assistant Bot Sales Inquiry&quot;,
    BLANKVALUE(Case.Subject, &apos;Support &apos; + TEXT(MessagingChannel.MessageType) + &apos; Conversation&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subject</label>
    <type>Text</type>
</CustomField>