force-app/main/default/objects/MessagingSession/fields/SDO_LiveMessagingChannel__c.field-meta.xml
<CustomField>
    <fullName>SDO_LiveMessagingChannel__c</fullName>
    <description>JD - 10/4/22 - Channel formula adds visual aid to show users quickly what type of message this was connected to.</description>
    <formula>IMAGE(CASE(MessagingChannel.MessageType,
&quot;Facebook&quot;,&quot;https://sdo-master.s3.us-west-1.amazonaws.com/icons/facebook.png&quot;,
&quot;Text&quot;,&quot;https://sdo-master.s3.us-west-1.amazonaws.com/icons/sms.png&quot;,
&quot;Embedded Messaging&quot;,&quot;https://sdo-master.s3.us-west-1.amazonaws.com/icons/embeddedmessaging.png&quot;,

&quot;https://sdo-master.s3.us-west-1.amazonaws.com/icons/phone_else_.png&quot;),&quot;&quot;,22,22)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel</label>
    <type>Text</type>
</CustomField>