force-app/main/default/objects/MessagingSession/fields/SDO_MessagingSession_BotName__c.field-meta.xml
<CustomField>
    <fullName>SDO_MessagingSession_BotName__c</fullName>
    <description>JD - Used to assist in reporting and other logic related to messaging sessions based on Bot</description>
    <label>Bot Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Luna</fullName>
            </value>
            <value>
                <fullName>Buyer Assistant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>