force-app/main/default/objects/MessagingSession/fields/SDO_Service_IsEnhanced__c.field-meta.xml
<CustomField>
    <fullName>SDO_Service_IsEnhanced__c</fullName>
    <description>Whether the associated Messaging Channel is an Enhanced Channel (or standard)</description>
    <formula>ISPICKVAL(MessagingChannel.PlatformType, &apos;Enhanced&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates this session is associated to an Enhanced Messaging Channel</inlineHelpText>
    <label>Is Enhanced</label>
    <type>Checkbox</type>
</CustomField>