force-app/main/default/objects/MessagingSession/fields/User_Session_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Session_Id__c</fullName>
    <label>User Session Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>