force-app/main/default/objects/MessagingSession/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <label>UserId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>