force-app/main/default/objects/MessagingSession/fields/UsersId__c.field-meta.xml
<CustomField>
    <fullName>UsersId__c</fullName>
    <label>UsersId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>