force-app/main/default/objects/MessagingSession/listViews/All_Messaging_Sessions.listView-meta.xml
<ListView>
    <fullName>All_Messaging_Sessions</fullName>
    <columns>Owner</columns>
    <columns>Name</columns>
    <columns>MessagingChannel</columns>
    <columns>MessagingEndUser</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>PlatformType</columns>
    <filterScope>Mine</filterScope>
    <label>All Messaging Sessions</label>
</ListView>