force-app/main/default/objects/MessagingSession/listViews/BuyerAssistant_Queue_Group_MessagingSession.listView-meta.xml
<ListView>
    <fullName>BuyerAssistant_Queue_Group_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Buyer Assistant Queue Group</label>
    <queue>BuyerAssistant_Queue_Group</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>