force-app/main/default/objects/MessagingSession/listViews/Messaging_Queue_MessagingSession.listView-meta.xml
<ListView>
    <fullName>Messaging_Queue_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Messaging Queue</label>
    <queue>Messaging_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>