force-app/main/default/objects/MessagingSession/listViews/SDO_Service_LiveMessage_MessagingSession.listView-meta.xml
<ListView>
    <fullName>SDO_Service_LiveMessage_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>SMS</label>
    <queue>SDO_Service_LiveMessage</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>