force-app/main/default/objects/MessagingSession/listViews/SDO_Service_Messaging_MessagingSession.listView-meta.xml
<ListView>
    <fullName>SDO_Service_Messaging_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Messaging</label>
    <queue>SDO_Service_Messaging</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>